2005-04-22  Philippe Gerum  <rpm@xenomai.org>

	* examples: Move example code to the new per-skin demo directory.

2005-02-09  Philippe Gerum  <rpm@xenomai.org>

	* vm/thread.cc (joinClientThreads): Lower interrupt masking level
	to flush all pending IRQs while idling.

2005-02-08  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm/system.h: Add missing PAGE_ALIGN and
	PAGE_MASK.

	* gcic/gcic.cc (main): Properly drain __fusion_skin_init and
	__fusion_user_init hook at link time.

2005-01-19  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Solve chicken-and-egg problem related to the
	installation directory.

2004-12-27  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm/system.h (xnarch_read_environ): Fix crash.

2004-06-05  Philippe Gerum  <rpm@xenomai.org>

	* sim: Purge ISVC support.

2004-05-22  Philippe Gerum  <rpm@xenomai.org>

	* sim: Fix path to shared files (icons and tcl).

2004-05-10  Philippe Gerum  <rpm@xenomai.org>

	* sim: Adapted to the fusion branch from vesuvio.

2004-04-20  Philippe Gerum  <rpm@xenomai.org>

	* vm/trigger.cc (body): Fix a bug causing the trigger to be lost
	when it is reprogrammed on the fly to a regressing timeout date.

	* gcic/gcic.cc (main): Drain __fusion_skin_init() instead of
	mvm_init_skin() at link time.

2004-04-19  Philippe Gerum  <rpm@xenomai.org>

	* include/asm/rtai_xeno.h, vm/simapi.cc: Provide support for the
	aperiodic time source now supported by the Xenomai nucleus.

2004-01-11  Philippe Gerum  <rpm@xenomai.org>

	* include/asm/rtai_xeno.h (xnarch_enter_root): Update prototype.

2003-12-28  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* vmutils: added tclUtil.c et tclUtil.h to remove the dependence
	of libmvmutils upon libtcl.

	* rtai-sim: remove all dependencies upon libtcl, except for the
	scope subdirectory. Doing so prevents conflicts with tcl8.4 and
	higher which link against the NPTL, since the latter is
	incompatible with the lightweight-context switching implemented by